app/assets/stylesheets/hyrax.scss
/* ...
 *= require jquery-ui
 *= require select2
 *= require_self
*/

@import "bootstrap-sprockets";
@import "bootstrap-default-overrides";
@import 'bootstrap';
@import 'blacklight/blacklight';
@import "font-awesome";
@import "blacklight_gallery/gallery";
@import "blacklight_gallery/masonry";
@import "blacklight_gallery/slideshow";
@import "blacklight_gallery/osd_viewer";
@import 'hyrax/hyrax';
@import 'hyrax/login_signup';
@import 'variables';


body {
  margin-bottom: 0;

  &.dashboard {
    padding-top: 0;
  }
}

.sidebar {
  .profile {
    .profile-logout {
      text-align: center;

      a {
        padding-left: 0 !important;
      }
    }
  }
}

.alert-message {
  .alert {
    margin: 0;
    border-radius: 0;
  }
}

.metadata-table {
  width: 100%;

  td,
  th {
    padding: 1rem 0;
    vertical-align: top;
    border-bottom: 1px solid $border;
  }

  th {
    width: 20%;
  }

  td {
    width: 80%;
  }

  th:after {
    content: ":"
  }

  ul.tabular {
    margin: 0;
    padding: 0;
    margin-left: 20px;
  }
}

.work-type {
  margin-top: -20px;
  margin-bottom: 3.375rem;

  .work-type-body {
    padding: 0 2.5rem;
  }

  .work-title-wrapper {
    padding: 20px 40px;
    background-color: $cream;
    margin-left: -15px;
    margin-right: -15px;
    margin-bottom: 3.375rem;

    h2 {
      margin: 0;
      padding: 0;
      color: $slate-dark;
      font-size: 1.75rem;
    }

    .collection {
      font-size: 1.25rem;
      text-align: right;

      .member_of_collections {
        list-style: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
        float: right;

        li {
          float: left;

          &:not(:last-child):after {
            content: "; ";
            margin-right: 5px;
          }
        }
      }
    }

  }

  .work-date {
    span {
      font-weight: bolder;
      color: $slate-dark;
    }
  }

  .work-short-metadata {
    display: flex;
    flex-flow: row wrap;
    font-size: 1.25rem;
    margin-bottom: 2.25rem;

    .metadata-table {
      li {
        float: left;

        &:not(:last-child):after {
          content: "; ";
          margin-right: 5px;
        }
      }
    }
  }

  .social-media {
    background-color: hsl(0, 0%, 95%);

    .share-link {
      padding: 10px;
      font-size: 1.25rem;
      width: 40px;
      text-align: center;
      text-decoration: none;
      border-radius: 50%;

      &:hover {
        opacity: 0.7;
      }
    }

    .fa-facebook {
      background: #3B5998;
      color: white;
    }

    .fa-twitter {
      background: #55ACEE;
      color: white;
    }

    .fa-pinterest {
      background: #cb2027;
      color: white;
    }

    .fa-linkedin {
      background: #007bb5;
      color: white;
    }
  }

  .work-type-extensions {
    padding: 0 2.5rem;
    margin-top: 3.375rem;

    .tab-content {
      margin-top: 20px;

      #access {
        .access-rights {
          padding: 10px 0;
          font-size: 1rem;

          th,
          td {
            padding-bottom: 20px;
          }

          ul {
            margin: 0;
            padding: 0;
            margin-left: 20px;
          }
        }
      }

      #metadata {
        flex-flow: row wrap;
        font-size: 1.25rem;
        margin-bottom: 2.25rem;

        &.active {
          display: flex;
        }

      }
    }
  }
}

.object-viewer {
  div {
    text-align: center;
    font-size: 1.25rem;

    img {
      max-width: 300px;
      margin: auto;
    }
  }
}

.no-preview {
  color: $slate;
}

.p-l {
  padding-left: 1em;
}

.p-r {
  padding-right: 1em;
}

.hyc-bl-sort {
  overflow: hidden;
}

.hyc-bl-results {
  .date {
    width: 20%;
  }
}

.fa {
  &.collection-icon-search {
    font-size: 7em;
  }
}

.gallery {

  .document {
    border: none;
    border-bottom: none !important;
    max-width: 250px;

    .thumbnail {
      border: none;

      &>img,
      & a>img {
        min-width: 100%;
      }

      .search-results-title-row {
        h4 {
          font-size: 14px;
          line-height: 20px;
          margin: 0;
          padding: 0;
          text-align: left;
        }

        &.collection {
          h4 {
            text-align: center;
          }
        }

        .search-result-title-col {
          padding: 0;
          padding-left: 15px;
        }

        .search-result-date-col {
          padding: 0;
          padding-right: 15px;
          border-left: 1px solid #ddd;
        }

        .search-result-date {
          text-align: right;
          display: inline-block;
          width: 100%;
        }
      }
    }
  }
}

.search-result-wrapper .search-results-title-row .search-result-title {
  display: inline-block;
  margin: 0;
  margin-right: 15px;
}

.home-content {
  position: relative;
  background-image: url(/assets/homepage_backdrop.png);
  background-position: 50% 0%;
  background-size: cover;

  .home-search {
    padding: 4rem;
    padding-bottom: 20rem;
    color: #fff;

    .search-container {
      padding: 2rem;
      background-color: rgba(22, 21, 20, 0.7);
      max-width: 70%;
      margin: auto;

      h3 {
        color: #fff;
        margin-top: 0;
        font-size: 2rem;
        font-weight: normal;
        text-align: center;
        margin-bottom: 20px;
      }

      .search-browse {
        list-style: none;
        margin: 0;
        padding: 0;
        font-size: 1.25rem;
        overflow: hidden;

        li {
          float: left;
          padding-right: 5px;

          a {
            color: #fff;
            text-decoration: underline;
          }
        }
      }
    }
  }

  .image-caption {
    position: absolute;
    bottom: 30px;
    right: 40px;
    font-style: italic;

    a {
      color: #fff;

      a:hover {
        text-decoration: underline;
      }
    }
  }
}

#content_block_page {
  padding: 20px;
  margin: 0;
}

/* RESPONSIVE */
@media (max-width: 992px) {
  .work-type {
    .work-title-wrapper {
      .collection {
        text-align: left;

        .member_of_collections {
          float: left;
        }
      }
    }
  }

  .home-content {
    .home-search {
      .search-container {
        max-width: none;
      }
    }
  }

}

@media (min-width: 768px) {
  .dl-horizontal dt {
    width: auto;
    padding-right: 10px;
  }

  .dl-horizontal dd {
    margin-left: 0;
  }
}

@media (max-width: 640px) {
  .home-content {
    .home-search {
      padding: 0;
      padding-bottom: 4rem;
    }
  }
}

